Fixed #13732 - Fix scrollbar shift

--- a/src/app/components/common/common.css
+++ b/src/app/components/common/common.css
@@ -51,6 +51,7 @@
 
 .p-overflow-hidden {
     overflow: hidden;
+    padding-right: var(--scrollbar-width);
 }
 
 .p-unselectable-text {
